--- a/airbyte-integrations/connectors/source-booker/Makefile
+++ b/airbyte-integrations/connectors/source-booker/Makefile
@@ -20,4 +20,4 @@ read-debug:
 	 python3 main.py read --config secrets/config.json --catalog sample_files/catalog.json --debug
 
 read-state:
-	python3 main.py read --config secrets/config.json --catalog sample_files/catalog.json --state sample_files/state.json
+	python3 main.py read --config secrets/config.json --catalog sample_files/catalog.json --state sample_files/state.json --debug
