dataverse: rework of discover considering its size over 3MB

--- a/airbyte-integrations/connectors/source-microsoft-dataverse/source_microsoft_dataverse/spec.yaml
+++ b/airbyte-integrations/connectors/source-microsoft-dataverse/source_microsoft_dataverse/spec.yaml
@@ -39,6 +39,16 @@ connectionSpecification:
       airbyte_secret: true
       order: 3
 
+    tables:
+      type: array
+      description: The list of tables to sync from. Defaults to all tables.
+      items:
+        type: string
+      minItems: 0
+      uniqueItems: true
+      title: Tables
+      order: 4
+
     odata_maxpagesize:
       type: integer
       description: Max number of results per page. Default=5000
